new rss post, learn intro, minor formatting
Former-commit-id: fff4fd5ff06993f55ed7fa4764ef7282a40527d6

--- a/learn.html
+++ b/learn.html
@@ -11,14 +11,11 @@ of the Moon."
 
 <header>
 	<div id="Logo">
-		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
+		<a class="clearbk" href="index.html"><img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards"></a>
 	</div>
 	<div class="intro">
-		<h1>Interactives</h1>
-		<p>We have begun a collection of tools that illustrate important aspects of the physics
-			of various undertakings in space. Getting a feel for how your equipment interacts with the environment
-			is really central to designing life in space. We will expand and refine all these with time, making them
-			more intuitive with graphics, combining them, and so on.
+		<h1>How Space Works</h1>
+		<p>This is a collection of calculators, animations, and mini-apps that illustrate the physics of space. There are also tutorials on core concepts. This is being expanded over time to get across a feel for space and space travel in an intuitive way.
 		</p>
 	</div>
 </header>
