--- a/timeline.html
+++ b/timeline.html
@@ -2,14 +2,10 @@
 layout: content
 title: Timeline for Lunar Colonization
 description: Events leading to colonization of the Moon, steps taken for profitable lunar industry, and the foundation of a lunar society.
-headline: The Path to a Lunar Society
-intro: What matters is understanding what <i>needs</i> to happen, and what <i>can</i> happen. The dates aren't important. Nothing determines the dates more than the priority the people of the space-faring nations place on this goal. This page explains the best conceivable path if the will is there and the politics of conflict is set aside. If we were really aware of what amazing things we could achieve if only we worked together, perhaps we would find the will to do so. Take what follows as an illustration of what that could be.
+headline: Timeline to a Lunar Society
+intro: What matters is understanding what <i>needs</i> to happen, and what <i>can</i> happen. Then if people feel it is a goal worth pursuing, it happens. This page explains the best conceivable path if that will is there and pushes aside conflict politics. In that situation, from when the first mission launches, it would take about 50 years to get to the part called The Space Boom. <br><br>The path uses known technology, a reasonable pace of development, and a small assumption that artificial intelligence develops at a pace actually rather slower than it has in the last 5 years. If we knew what amazing things we could achieve if only we worked together, perhaps we'd find the will to do so. What follows shows a world like that.
 ---
-
-<details style="margin-top: 3rem; margin-left: 5%;">
-<summary>Ongoing process item</summary>
-This is a part of the site that is expanded and detailed as the project develops. It will change and grow regularly.
-</details>
+<br><br>
 <div class="columnSet">
  <article class="column" id='TransportIntro'>
   <h1>Transport Systems</h1>
@@ -371,13 +367,13 @@ This is a part of the site that is expanded and detailed as the project develops
     <h5>Earth Orbital skyhook Completed</h5>
     <p>The lower tether is built up into a set of ribbons able to accomodate several cars travelling up and down. Cars are able to take payloads of up to 50 metric tons, the foot can berth a ship of up to 200 tons. The upper tether is designed to ferry ships docked at the anchor station up the tether until they are released at the right altitude for their destination. This can only be done one at a time, but ships can still be launched that way up to once a day.</p>
     <p><h6>Anshar Station</h6>The anchor station becomes a hub of space activity and starts to grow into a community. It is named after the Sumerian god of the heavens.</p>
-    <p><h6>Realization of Genuine Space Shuttels</h6>Because the velocity needed to reach the skyhook foot is so much lower, rockets that are fully reusable hundreds of times with minimal repair and maintenance become common, and are able to deliver about 4 times as much payload for each ton of fuel as rockets today.</p>
+    <p><h6>Realization of Genuine Space Shuttles</h6>Because the velocity needed to reach the skyhook foot is so much lower, rockets that are fully reusable hundreds of times with minimal repair and maintenance become common, and are able to deliver about 4 times as much payload for each ton of fuel as rockets today.</p>
     <p><h6>Cheap Delivery of Asteroid Precious Metals</h6>The platinum-group metals in the anchor asteroid are easily mined and can be loaded onto shuttles returning to the surface. They are alone enough to pay for the cost of building this skyhook complex - especially platinum, palladium, and gold.</p>
     <h5>The Moon Hosts Several Fleets</h5>
     <p>Between Anshar lowering the cost to the Moon much further, and a highly automated construction industry on the Moon now able to build almost complete ships of several kinds all on its own, soon a number of entities operate fleets in space. The Moon Agency supervises and regulates them. </p>
-    <h5>Retrieval of Asteroids</h5>
-    <p>Some of these fleets are based on profitable asteroid retrieval. They can be brought in for extraction of their rare platinum-group metals, or so the iron and nickel in them can be used as construction materials in space, or to form the bulk of a space station, or so the water and carbon in them can be used as radiation shielding and life support for space stations or the lunar colonies.</p>
+    <p><h6>Asteroid Fetcher Fleets</h6>Some of these fleets are based on profitable asteroid retrieval. They can be brought in for extraction of their rare platinum-group metals, or so the iron and nickel in them can be used as construction materials in space, or to form the bulk of a space station, or so the water and carbon in them can be used as radiation shielding and life support for space stations or the lunar colonies.</p>
     <p>Most fleet ships are in the asteroid retrieval business. Some others are heading out to found bases on other worlds. A few are building free-space colonies. Some are simply exploring.</p>
+    <p><h6>Moon Agency Fleet</h6>Usually referred to simply as the Moon Fleet or the MAF. Several more souped-up nuclear ships are added, capable of quick rendezvous with anything near cis-lunar space. With quick addition of extra supply pods, they can also set out to rendezvous with ships anywhere in the inner solar system. They expand the capability to mount rescues, and to seize ships. </p>
   </article>
   <article class="column" id="LalandeDome">
     <h5>Lalande City by Robot Magic</h5>
