--- a/timeline.html
+++ b/timeline.html
@@ -38,7 +38,7 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
   </details>
  </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="ShipsRobotsISA">
  <article class="column" id="FirstTransportShips">
   <h5><a href="machines2.html#AsteroidAnchors">First Asteroid Retrieval Mission</a></h5>
   <ul>
@@ -119,7 +119,7 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
   <p>For this reason, such an endeavor provides the ideal way to develop the broad international collaboration needed to address long-term peace and prosperity on Earth.</p>
  </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="SkyhookHabsRP">
  <article class="column" id="1stPolarTether">
   <h5><a href="machines2.html#TetherTransport">Vertical Skyhook Construction in Polar Orbit</a></h5>
   <ul>
@@ -177,9 +177,9 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
   </article>
 </div>
 <div class="columnSet">
-<article class="spanAll" id="ResidenceProgramTable">
+<article class="spanAll" id="ResidenceProgramChart">
   <h2>The Residence Program - Basic structure and rules</h2>
-  <p>A lot happens during the course of the 7 rounds of the RP. By the time the last round is complete, Lalande and Inukshuk have both reached the full extent shown in Phase 1 of the virtual colonies. Although the residents must qualify, and sign a contract stipulating their duties and obligations, they are free to pursue their own projects as time permits. In later rounds residents will have more free time and greater discretion to pursue activities aside from their official duties on the colony.</p>
+  <p>A lot happens during the course of the 7 rounds of the RP. By the time the last round is complete, Lalande and Inukshuk have both reached the full extent shown in Phase 1 of the virtual colonies. Although the residents must qualify, and sign a contract stipulating their duties and obligations, they are free to pursue their own projects as time permits. In later rounds residents will have more free time and greater discretion to pursue activities aside from their official duties on the colony. For more detail on qualifications see the previous section.</p>
   <table>
   <tr>
   <th>Round</th><th>Spaces</th><th>Price</th><th>Total Revenue</th>
@@ -230,7 +230,7 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
 <p>Price for a residential spot when the Moon opens to the public:<h6> $250,000</h6>. Population when the opening occurs: <h6>25,600 souls</h6>. Though the duration of the program could be drawn out by difficult techical hurdles, since energetic investment is being assumed, we shall estimate the whole thing is completed in <h6>50 years</h6>.
  </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="InukshukRP1">
   <article class="column" id="AsteroidforEquatorialTether">
     <h2>Transport cont'd</h2>
     <h5>Asteroid for Equatorial skyhook arrives in orbit</h5>
@@ -264,7 +264,7 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
   <article class="column" id="RPround1">
     <h2>Socio-Economic Dev. cont'd</h2>
     <h5>Ordinary Life on the Moon</h5>
-    <p>The 200 residents from RP round 1 work alongside the First Hab crew to achieve the listed goals. English is the working language. The First Hab crew are the senior staff, and lead RP crews on the various projects. Work largely continues to be done remotely from within the habs at interface stations. </p>
+    <p>The 200 residents from RP round 1 work alongside the 50 First Hab crew to achieve the listed goals. English is the working language. The First Hab crew are the senior staff, and lead RP crews on the various projects. Work largely continues to be done remotely from within the habs at interface stations. </p>
     <p>Each married couple has a small apartment. Kitchens, bathrooms, showers, clothes washers, and everything else that involves plumbing, waste processing, or food is in centralized facilities shared by everyone. The second hab is known as Long Hab, thanks to its long narrow shape. It has a common exercise area, multi-use gathering area, and workshop for the use of residents on their own time. The greenhouses are also set up partially as relaxation and exercise areas. </p>
     <h5>Health Program Developed</h5>
     <p>The First Hab crew stayed healthy before this by an intensive exercise program modeled on that developed for the ISS, but with time better approaches are found.</p>
@@ -276,7 +276,7 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
     </ul>
   </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="3baseRP2-4">
   <article class="column" id="GagarinStation">
     <h5>The Equatorial Skyhook becomes Gagarin Station</h5>
     <p>
@@ -332,7 +332,7 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
     <p><h6>Informal Economy</h6>As time goes on, there are increasing numbers of deals between residents for goods and services that are extras. There is barter, and sometimes exchanges of funds between Earth-side accounts, which are then used to have extra luxury items delivered. It is usually used for favorite foods, extra clothing, and small furnishings. Towards the end of this period, the freedom of residents to have contracts with entities on Earth and be paid increases, and the wealth of some residents suddenly increases as a result.</p>
   </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="RPround5">
   <article class="column" id="MoreTethers">
     <h5>Addition of 3 More Polar Skyhooks</h5>
     <p>The original asteroid retrieval ship, now heavily upgraded, delivers asteroids for the remaining skyhooks for the Moon. They are placed in staggered polar orbits, one every 90&deg;, and all the skyhooks have the same orbital period so they will never interfere with each other. All three mass 25 kilotons, like the Gagarin asteroid. One is again carbonaceous, the other two are mostly metal. They are developed into skyhooks like Sagan, minus the telescope and with less living volume. Mining equipment goes to all three, but there is little call for human habitation on them and they have only basic facilities for a small, occasional crew. The mining and transport work is overseen remotely and is largely automatic. </p>
@@ -362,7 +362,7 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
     <p>Once the lower tether of the Earth skyhook is in place, it is used to transport most of the round 5 astronauts to the Moon. </p>
   </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="RProunds6-7">
   <article class="column" id="EarthTetherComplete">
     <h5>Earth Orbital skyhook Completed</h5>
     <p>The lower tether is built up into a set of ribbons able to accomodate several cars travelling up and down. Cars are able to take payloads of up to 50 metric tons, the foot can berth a ship of up to 200 tons. The upper tether is designed to ferry ships docked at the anchor station up the tether until they are released at the right altitude for their destination. This can only be done one at a time, but ships can still be launched that way up to once a day.</p>
@@ -405,17 +405,18 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
     <p>The real issue is how children grow. Minor irregularities are detected rather quickly when infants spend more than a day or two in lower gravity, and so they are taken to Earth or another 1g environment. The families return regularly to see how the children fare once they are a little older. Centrifuges suitable for extended use are built so that methods for children to live on the Moon can be developed. While on the Moon the families make use of them so that exercise, diet, and pharmaceutical programs can be slowly developed without the children being exposed to significant risk. Whenever signs of health deviations are detected, the families retire again to a full-gravity location. After about a decade of such monitoring and testing, how to safely raise a child seems clear.  </p>
   </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="SpaceBoom">
   <article class="spanAll">
     <h1>The Space Boom</h1>
     <p> If not already obvious from some of the grand plans in the previous section, this is the beginning of the Space Boom. Many missions that were previously highly impractical or impossible are now pursued. The possibilities beyond this point are so varied and vast it is hard to make any predictions, other than that everything will change. The scope that Moonwards can cover right now is too small to consider the many projects that would be started at this point. What is here can be considered as a sampling.</p>
-    <p>An example for Earth orbit: it makes complete sense that a number of additional skyhook complexes in LEO would shortly be erected, of even greater capacity. Satellite orbits and space debris are now controlled such that there is little collision concern. Several skyhook complexes are placed in polar orbits, allowing almost the entirety of common satellite work to be done on the skyhook stations instead - communications, data transmission, broadcasting, earth observation, mapping services. So, the tether feet are lowered almost to the Karman line, 100 km above the Earth's surface. </p>
-    <p>An example for deep space: automated ships start to fly out to Saturn's rings, where they capture chunks of ice from the rings in giant bags. The water ice is delivered to the Moon and the space stations, where it is mostly used to create permanent infrastructure: artificial lakes and rivers, transparent shielding over large areas. These ships can bring back 50 to 100 kilotons of pure water ice on a single run, and a fleet of them simply shuttle back and forth continuously</p>
-    <p>An example for cis-lunar space: an O'Neill cylinder is now practical, an asteroid of appropriate size and composition is brought to L5 and work begins.</p>
+    <p>An example for Earth orbit: it makes complete sense that a constellation of skyhook complexes in LEO would shortly be erected, of even greater capacity. Satellite orbits and space debris are now controlled such that there is little collision concern. Several skyhook complexes are placed in near-polar orbits, allowing almost the entirety of common satellite work to be moved to the skyhook stations instead - communications, data transmission, broadcasting, earth observation, mapping and tracking services. So, the tether feet are lowered almost to the Karman line, 100 km above the Earth's surface. </p>
+    <p>An example for deep space: automated ships start to fly out to Saturn's rings, where they capture chunks of ice from the rings in giant bags. Saturn's rings are known to consist of 99% pure water ice, and there is no need to mine it, you just bag a bunch of chunks. The ships run on nuclear engines that use a bit of the water as fuel. They don't even split the water into hydrogen and oxygen to get the high I<sub>sp</sub> of liquid hydrogen - they just use water. The engines still have an I<sub>sp</sub> of over 400 seconds, and the ships are cheap to make and hardly need maintenance. Scores of them ply the route between Saturn and Earth, optimizing their trajectories themselves, burning fuel liberally to reduce turnaround time and thus maximize production. The water ice is delivered to the Moon and the space stations, where it is mostly used to create permanent infrastructure: artificial lakes and rivers, transparent shielding over large areas. These ships  bring back 100 kilotons of pure water ice on a single run. One arrives in Lunar or Earth orbit every two weeks. For starters...</p>
+    <p>An example for cis-lunar space: an O'Neill cylinder is now practical, on the scale shown in the classic illustrations, a tiny nation-state unto itself. An asteroid of appropriate size and composition is hauled by a super-mega-fetch ship to L5 and work begins.</p>
     <p>Cloud cities above Venus? Colonies on Mars and its moons? Colonies on the terminator of Mercury? On Ceres? On Callisto? Sure! Not all at once, it depends what interests people most, but any of these plans is now feasible. </p>
+    <p>I recall an old demonstration i once read showing how little people appreciate the scale of space, that talked about how ridiculously long it would take to evacuate the entire population of Earth. I believe there was some movie around then that depicted that - Titan AE, maybe. It would take a while, but without leaning on fusion power, or carbon nanotubes, or even robots as smart as people (though they get fairly close - behaving rather like savants with severe autism), the systems portrayed here could do that. If there was a century of lead time, our entire population could be moved off the Earth to colonies in space.</p>
   </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="PostBoom">
   <article class="column" id="KindsofShips">
     <h2>Transport cont'd - and More</h2>
     <h5>Lots and lots of ships and launchers</h5>
