misc small changes
Former-commit-id: c0b4ca4f98841ebc4e955a82dc6fd8ec2aabf922 [formerly 99b08f90e5771acc90942665e45e620f5e7f2056]
Former-commit-id: cd66cacb1e4ad54f1ae4c9234bf3e0f862a4cc40

--- a/project.html
+++ b/project.html
@@ -15,6 +15,7 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 			<p class="byline">
 				Gene Cernan, as he stepped off the Moon<br>Apollo 17, Dec. 19, 1972
 			</p>
+			<p>{% timeago 1972-12-19 %}</p>
 	</div>
 </header>
 <div class="container">
@@ -93,7 +94,7 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 		<p>Some of the things we have are standalone and not integrated into the website, for example
 		<a href="tools/engineSearch.html">"Engine Search"</a> a selection tool for rocket engines.</p>
 		<p>The interactive applets we have made can be downloaded from <a href="http://www.moonwards.com/GeoGebra/">www.moonwards.com/GeoGebra/</a>. The directory also contains quite a few that are not on the website yet.</p>
-		<p>We also have some datafiles available at <a href="http://www.moonwards.com/json/">www.moonwards.com/json/</a></p>
+		<p>We also have some datasets available at <a href="http://www.moonwards.com/json/engines.json">www.moonwards.com/json/engines.json</a> and <a href="http://www.moonwards.com/json/planets.json">www.moonwards.com/json/planets.json</a></p>
 	</div>
 	</aside>
 </div>
