add license logo and statement
Former-commit-id: e278aa1840dc234ee0d3c4200026488fa29176c3 [formerly 4753307345ec8375eeb83fa2749782bbee500365]
Former-commit-id: 88c5df23f08e202e8a291f17a026fe2926e81812

--- a/project.html
+++ b/project.html
@@ -13,9 +13,8 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 			<p>	"We leave as we came and, God willing, as we shall return, with peace and hope for all mankind."
 			</p>
 			<p class="byline">
-				Gene Cernan, as he stepped off the Moon<br>Apollo 17, Dec. 19, 1972
-			</p>
-			<p>{% timeago 1972-12-19 %}</p>
+				Gene Cernan, as he stepped off the Moon<br>Apollo 17, Dec. 19, 1972 <br>
+        <i>{% timeago 1972-12-19 %}</i></p>
 	</div>
 </header>
 <div class="container">
@@ -96,6 +95,10 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 		<p>The interactive applets we have made can be downloaded from <a href="http://www.moonwards.com/GeoGebra/">www.moonwards.com/GeoGebra/</a>. The directory also contains quite a few that are not on the website yet.</p>
 		<p>We also have some datasets available at <a href="http://www.moonwards.com/json/engines.json">www.moonwards.com/json/engines.json</a> and <a href="http://www.moonwards.com/json/planets.json">www.moonwards.com/json/planets.json</a></p>
 	</div>
+  <div class="sideDiv">
+    <img style="width: 40%; border: none; margin-left: 30%;" src="img/gpl-dark-yellow.svg" alt="Logo for the Gnu Public License v3">
+    <p>All material on this website and in the GitHub repository - except the Moonwards logo - is licensed under the Gnu Public License v3. You can distribute and/or modify anything except the logo under the terms of that license. <a href="https://github.com/briligg/moonwards/blob/master/LICENSE.txt">Please see the terms of the license here.</a> The logo may be reproduced without prior permission only within the body of an article or comment, for purposes of documenting the project. It may not be used in any way that implies endorsement or participation by Moonwards, or association with Moonwards, without prior written permission.</p>
+  </div>
 	</aside>
 </div>
 <div class="container">
