--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ of the Moon."
 						that purpose.
 					</p>
 					<p>
-						The first colony created will show a full town with a population of 20,000. 
-						It will have developed industries and facilities, spacious beautiful architecture, 
+						The first colony created will show a full town with a population of 20,000.
+						It will have developed industries and facilities, spacious beautiful architecture,
 						transport systems moving high volumes of people and cargo around the Moon and the solar system.
-						It shows what happens just beyond the tipping point, when technology enables a space boom. 
+						It shows what happens just beyond the tipping point, when technology enables a space boom.
 						To evaluate the importance of space exploration, this is the stage that must be understood.
 					</p>
 					<p>
@@ -90,16 +90,16 @@ of the Moon."
 						Jan. 11, 2017 by Kim -- kim@moonwards.com
 					</p>
 				</article>
-			<article class="innerDiv under-tabs tabcontent" id="blog">
+			<article class="blackInnerDiv under-tabs tabcontent" id="blog">
 				<iframe class="goodHeight" src="blogMain.html" width="100%" style="border:none;"></iframe>
 			</article>
 			<article class="innerDiv under-tabs tabcontent" id="comments">
 				<h1>This will take some work...</h1>
 				<p>
-					This site has been written by someone who doesn't do it for a living or anything, and learned how mostly as she went along. 					Putting in a comment section that isn't littered with spam and doesn't involve a paid service 
-					or a bunch of poorly targeted ads means learning how to work with a database. 
-					With the traffic this site currently has, it should be manageable to moderate comments and maintain the database myself, 						however this is another new thing i have to learn. 
-					For now, you can comment at the <a target="_blank" href="http://moonwards1.blogspot.com/">Blogger blog</a>, 
+					This site has been written by someone who doesn't do it for a living or anything, and learned how mostly as she went along. 					Putting in a comment section that isn't littered with spam and doesn't involve a paid service
+					or a bunch of poorly targeted ads means learning how to work with a database.
+					With the traffic this site currently has, it should be manageable to moderate comments and maintain the database myself, 						however this is another new thing i have to learn.
+					For now, you can comment at the <a target="_blank" href="http://moonwards1.blogspot.com/">Blogger blog</a>,
 					or on the <a href="http://www.moonwards.com/forum/">forum</a>.
 				</p>
 				<br>
