add Disqus to most blog post, reorganize index.html
Former-commit-id: a3916929c95fdcd685c12d222478a14c34a49081 [formerly 0d21de95b34959091e86275986231e35940a89e7]
Former-commit-id: fc2b08be9922803b94621acec62f5c0a724bc091

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@ of the Moon."
 			<ul class="tabs">
 				<li>
 					<a href="javascript:void(0)"
-					onclick="openContent(event, 'intro')" id="defaultOpen">Intro</a>
+					onclick="openContent(event,'blog')" id="defaultOpen">Blog</a>
 				</li>
 				<li>
 					<a href="javascript:void(0)"
-					onclick="openContent(event,'blog')">Blog</a>
-				</li>
-				<li><a href="javascript:void(0)"
-					onclick="openContent(event,'comments')">Comments</a>
+					onclick="openContent(event, 'intro')">Introduction</a>
 				</li>
 			</ul>
+			<article class="blackInnerDiv under-tabs tabcontent" id="blog">
+				<iframe class="goodHeight" src="blogMain.html" width="100%" style="border:none;"></iframe>
+			</article>
 			<article class="innerDiv under-tabs tabcontent" id="intro">
 				<h1>Realistic Lunar Colony, Coming Online</h1>
 					<p>
@@ -90,20 +90,6 @@ of the Moon."
 						Jan. 11, 2017 by Kim -- kim@moonwards.com
 					</p>
 				</article>
-			<article class="blackInnerDiv under-tabs tabcontent" id="blog">
-				<iframe class="goodHeight" src="blogMain.html" width="100%" style="border:none;"></iframe>
-			</article>
-			<article class="innerDiv under-tabs tabcontent" id="comments">
-				<h1>This will take some work...</h1>
-				<p>
-					This site has been written by someone who doesn't do it for a living or anything, and learned how mostly as she went along. 					Putting in a comment section that isn't littered with spam and doesn't involve a paid service
-					or a bunch of poorly targeted ads means learning how to work with a database.
-					With the traffic this site currently has, it should be manageable to moderate comments and maintain the database myself, 						however this is another new thing i have to learn.
-					For now, you can comment at the <a target="_blank" href="http://moonwards1.blogspot.com/">Blogger blog</a>,
-					or on the <a href="http://www.moonwards.com/forum/">forum</a>.
-				</p>
-				<br>
-			</article>
 		</div>
 	</section>
 
