--- a/wackyTech.html
+++ b/wackyTech.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 				<li>"The numbers" | debatable data | <span style="color:orange">raw idea</span></li>
 				<li>C3=0 manifolds | pure two-body zero energy transfers | <span style="color:red">Magic</span></li>
 				<li><a href="#mercuryIsGoodForYou">Mercury is good for you</a>| Density impulse | <span style="color:orange">raw idea</span></li>
-        <li>Neutron poison balancing in a nuclear thermal engine</li>
+				<li><a href="#neutronPoisons">Neutron poison balancing in a nuclear thermal engine</a></li>
 			</ul>
       <p>Technologies Kim thinks about</p>
       <ul>
@@ -274,6 +274,14 @@ Idea: Given a required velocity change, figure out how we can fill a tank with v
 			Notice of the acceleration in the beginning is the limiting factor. But what if I told you it is possible to get better thrust in the beginning using the same engine but another propellant? The thrust obtained from a propellant in a thermal rocket engines is inversely proportional to its exhaust velocity. Why? Well, the reactor has a power $P$ the mass flow is then proportional to $\frac{P}{v^2}$. Thrust is proportional to mass flow times exhaust velocity, so there you have it, $Thrust \propto  \frac{1}{v}$. So we want to use one propellant in the beginning with a low exhaust velocity and one at the end with a high exhaust velocity. In this case however, it is worth it to mix propellants to get an ideal exhaust belocity at all points in time to get a flat thrust curve. The equations are complicated
 			</p><p>
 			[[Sadly I have to wait a little before I can continue this part as I have misplaced my notes]]
+			</p>
+		</div>
+	</div>
+	<div class="outerDiv">
+		<div class="innerDiv" id="neutronPoisons">
+			<h2>Neutron poisons [stub]</h2>
+			<p>
+				Nuclear rocket engines are high impulse and high efficiency at the same time. The impulse part is however quirky. For a chemical rocket engine opperation is very close to being a toggle: you can turn it on and off at any point. Managing a reactor is a little different than that. After shut down you can most likely not just turn it on again right away. The prosess of reactor shut down and cooling is going to take days.
 			</p>
 		</div>
 	</div>
