--- a/tether_presentation.html
+++ b/tether_presentation.html
@@ -9,8 +9,12 @@ high radiation, intense sun, large temperature swings, and the substances
 of the Moon."
 ---
 <div id="tether_moduleContainer">
+	<svg>
+	</svg>
+<!--svg+SMIL intro, plays first then replaced with a canvas-->
 </div>
 <script>
+//this one is going to be injected after the SMIL is done with the intro
 t_module = {
 	injectionPoint:"tether_moduleContainer",
 	width:800,
@@ -24,6 +28,15 @@ t_module = {
 		this.moduleObject = document.getElementById("tether_module");
 	},
 	render:function(){
+		//draw UI
+		//draw main graphic field
+	},
+	graphics:{
+		"moon":{//placeholder
+			source:"",
+			height:100,
+			width:100
+		}
 	}
 };
 t_module.init();
