listing the various tools
Former-commit-id: 983225b4cf44582d89a64f8ac4c8fccd252645b2 [formerly 622913c33f521609fb31e58def2944250a0e9a3c]
Former-commit-id: 967b18dbf57f51e8770607a2e3998282be3859ba

--- a/learn.html
+++ b/learn.html
@@ -47,6 +47,20 @@ of the Moon."
 			</div>
 		</div>
 		<div class="outerDiv">
+			<div class="calcDiv">
+				<h2>Misc tools</h2>
+				<ul>
+					<li><a href="tools/teth.html">Tether Tool</a></li>
+					<li><a href="tools/starplotter.html">Starplotter</a></li>
+					<li><a href="tools/teth.html">Tether Tool</a></li>
+					<li><a href="tools/engineSearch.html">Engine Search</a></li>
+					<li><a href="tools/gravityTurn.html">Gravity Turn [bad UI]</a></li>
+					<li><a href="tools/planets.html">Transfer Calculator [in "progress"]</a></li>
+					<li><a href="pelletSimulator.html">Pellet Simulator [in "progress"]</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="outerDiv">
 			<div cladd="calcDiv">
 				<!--Geogebra applet-->
 				<div id="applet_container3" style="width:900px;height:500px;padding:10px;margin-bottom:20px;"></div>
