--- a/learn.html
+++ b/learn.html
@@ -46,17 +46,16 @@ of the Moon."
 				</div>
 			</div>
 		</div>
-		<div class="outerDiv">
+		<div class="outerDiv" id="MiscTools">
 			<div class="calcDiv">
 				<h2>Misc tools</h2>
 				<ul>
 					<li><a href="tools/teth.html">Tether Tool</a></li>
 					<li><a href="tools/starplotter.html">Starplotter</a></li>
-					<li><a href="tools/teth.html">Tether Tool</a></li>
 					<li><a href="tools/engineSearch.html">Engine Search</a></li>
 					<li><a href="tools/gravityTurn.html">Gravity Turn [bad UI]</a></li>
 					<li><a href="tools/planets.html">Transfer Calculator [in "progress"]</a></li>
-					<li><a href="pelletSimulator.html">Pellet Simulator [in "progress"]</a></li>
+					<li><a href="tools/pelletSimulator.html">Pellet Simulator [in "progress"]</a></li>
 				</ul>
 			</div>
 		</div>
